objects/SVMXC__SM_IB_Attributes_Template_Instance__c.object
<CustomObject>
    <description>Object to manage templates and installed product reference</description>
    <fields>
        <fullName>SVMXC__SM_Attr_Payload__c</fullName>
        <description>Attributes as JSON with data generated in the structure defined as part of associated IB’s product template</description>
        <label>Attr Payload</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Attr_Type__c</fullName>
        <description>Indicates which group/category the attributes belong to. Picklist values include CONFIG, TECHNICAL</description>
        <label>Attr Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TECHNICAL</fullName>
                </value>
                <value>
                    <fullName>CONFIG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Captured_On__c</fullName>
        <label>Captured On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Installed_Product_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to installed product id/name</description>
        <label>Installed Product Id</label>
        <referenceTo>SVMXC__Installed_Product__c</referenceTo>
        <relationshipLabel>IB Attributes Template Instances</relationshipLabel>
        <relationshipName>IB_Attributes_Template_Instance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Instance_Template_Id__c</fullName>
        <description>Unique Record Id, Managed by ServiceMax App</description>
        <label>Instance Template Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>IB Attributes Template Instance</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>IB Attributes Template Instance Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IB Attributes Template Instances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>